src/test/resources/shell/shellSyntaxErr/if/ifNofi.wacc
# if missing closing fi

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  if true
  then
    skip
  else
    skip
